tests/trybuild/try_indices/needs_to_provide_indices.rs
use indices::try_indices;

fn main() {
    let mut data: [i32; 0] = [];
    let slice = data.as_mut_slice();
    let result = try_indices!(slice);
}